Locomotion (Free Play)
Metallica 0.52
Mexico 86 (Italian Speech)
Middle Earth (Free Play)
Mr. & Mrs. Pac-Man Pinball (alternate version)
Odin (Prototype)
Pinball Champ (French Speech)
Pin-Bot J-2, J-3 (PEMBOT (no relation)) (MOD)
Pool Champion (Italian Speech, Free Play) (incomplete dump)
Rollergames LA-1
Royal Flush Deluxe rev. 1
Scared Stiff 1.1, 1.1 with Sound 1.0
Sexy Girl (exact clone of Bally Playboy but using an additional image projector)
Shadow, The LF-4 (French)
Shooting the Rapids (Free Play)
Space Riders (Free Play)
Space Shuttle (Zaccaria) (Free Play)
Spirit (initial release) & rev. 3 (MOD)
Star God (Free Play), (alternate sound, Free Play)
Striker (German Speech), (French Speech)
STTNG LX-8 (MOD) (using the special L-1 sound roms, note that the special callouts can be turned off completely within the game menu)
Swords of Fury LG-2 (German)
Teenage Mutant Ninja Turtles A 0.7 VUK (Prototype)
Terminator 2 L-8.4 (MOD)
Time 2000 (Free Play)
Time Machine (Zaccaria, Italian Speech), (Zaccaria, alternate)
Tommy 1.02 (Belgian), 2.01 (Dutch), 3.01 (German)
Transporter the Rescue LA-1, LU-3
Whirlwind LG-1 (German), LG-2 (German) (no U26 dumps available, seem to work with known one)
White Water P-6 (Prototype)
Wildfyre (One Ball MOD)
Winter Sports (Free Play)
Zankor (TMS5220 Italian Speech), (English Speech, and English Speech Free Play) & (German Speech, and German Speech Free Play) (the latter being an incomplete dump)

Removed Clones:
NBA Fastbreak: 3.1 with Sound S1.0 (as this was just created to be able to use S1.0, which is nowadays wired to 1.1/1.15 instead)
Star God (alternate version) (These game ROMs are the correct ones for the main set)
Star Trek: The Next Generation S7/DS (as these were just created to be able to use a P-1 sound rom, (for now) wired to P-4 instead)
White Water P-1/P-2 (as these were just created to be able to use the P-1 sound roms, now wired to P-6 as found on a real machine)



Version 3.5 (October 23rd, 2022) - "Trick or Treat"