@@ -179,6 +179,7 @@ Pool Champion (Italian Speech, Free Play) (incomplete dump)
 Rollergames LA-1
 Royal Flush Deluxe rev. 1
 Scared Stiff 1.1, 1.1 with Sound 1.0
+Secret Service 4.0 Europe
 Sexy Girl (exact clone of Bally Playboy but using an additional image projector)
 Shadow, The LF-4 (French)
 Shooting the Rapids (Free Play)
